Using internal DNS instead of a variable.

--- a/odinms/thepack_82/ThePack/db.properties
+++ b/odinms/thepack_82/ThePack/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://ODINMS_MYSQL_CONTAINER_IP_ADDRESS/odinms
+url=jdbc:mysql://maplestory-db/odinms
 user = root
 password = root
